added checking for match with animation of drawing a card

--- a/fixtheteleporter.css
+++ b/fixtheteleporter.css
@@ -60,10 +60,17 @@ div#player_name {
   display: flex;
   justify-content: center; }
 
+.connected:hover {
+  cursor: pointer; }
+
 #tile {
   background-image: url("img/telepTilesSmall.png");
-  width: 120px;
-  height: 120px; }
+  width: 115px;
+  height: 115px; }
+  #tile.checked-correct {
+    border-color: #00b300 !important; }
+  #tile.checked-incorrect {
+    border-color: red !important; }
   #tile[data-type="1"] {
     background-position-x: -0px;
     background-position-y: 0; }
@@ -76,7 +83,7 @@ div#player_name {
   #tile[data-type="1"][data-position="3"] {
     transform: rotate(270deg); }
   #tile[data-type="2"] {
-    background-position-x: -120px;
+    background-position-x: -115px;
     background-position-y: 0; }
   #tile[data-type="2"][data-position="0"] {
     transform: rotate(270deg); }
@@ -87,7 +94,7 @@ div#player_name {
   #tile[data-type="2"][data-position="3"] {
     transform: rotate(180deg); }
   #tile[data-type="3"] {
-    background-position-x: -240px;
+    background-position-x: -230px;
     background-position-y: 0; }
   #tile[data-type="3"][data-position="0"] {
     transform: rotate(180deg); }
@@ -98,7 +105,7 @@ div#player_name {
   #tile[data-type="3"][data-position="3"] {
     transform: rotate(90deg); }
   #tile[data-type="4"] {
-    background-position-x: -360px;
+    background-position-x: -345px;
     background-position-y: 0; }
   #tile[data-type="4"][data-position="0"] {
     transform: rotate(90deg); }
@@ -109,7 +116,7 @@ div#player_name {
   #tile[data-type="4"][data-position="3"] {
     transform: rotate(0deg); }
   #tile[data-type="5"] {
-    background-position-x: -480px;
+    background-position-x: -460px;
     background-position-y: 0; }
   #tile[data-type="5"][data-position="0"] {
     transform: rotate(0deg); }
@@ -120,7 +127,7 @@ div#player_name {
   #tile[data-type="5"][data-position="3"] {
     transform: rotate(270deg); }
   #tile[data-type="6"] {
-    background-position-x: -600px;
+    background-position-x: -575px;
     background-position-y: 0; }
   #tile[data-type="6"][data-position="0"] {
     transform: rotate(270deg); }
@@ -131,7 +138,7 @@ div#player_name {
   #tile[data-type="6"][data-position="3"] {
     transform: rotate(180deg); }
   #tile[data-type="7"] {
-    background-position-x: -720px;
+    background-position-x: -690px;
     background-position-y: 0; }
   #tile[data-type="7"][data-position="0"] {
     transform: rotate(180deg); }
@@ -142,7 +149,7 @@ div#player_name {
   #tile[data-type="7"][data-position="3"] {
     transform: rotate(90deg); }
   #tile[data-type="8"] {
-    background-position-x: -840px;
+    background-position-x: -805px;
     background-position-y: 0; }
   #tile[data-type="8"][data-position="0"] {
     transform: rotate(90deg); }
@@ -160,8 +167,12 @@ div#player_name {
   background-clip: padding-box; }
   .player_board[data-current="true"] #tile.selected {
     border-color: red; }
-  .player_board[data-current="true"] #tile:hover {
-    cursor: pointer; }
+
+.player_board:not([data-current="true"]) #tile {
+  border-style: solid;
+  border-color: transparent;
+  background-clip: padding-box;
+  border-width: 2px; }
 
 div.player_board #tile[data-position="0"] {
   grid-column-start: 1;
@@ -199,6 +210,10 @@ div#flip {
   div#flip[data-mirror="true"] {
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1); }
+  div#flip.connected:hover svg#flip_svg {
+    opacity: 1; }
+  div#flip svg#flip_svg {
+    opacity: 0.6; }
   div#flip[data-position="0"] {
     grid-column-start: 1;
     grid-row-start: 1; }
@@ -212,33 +227,37 @@ div#flip {
     grid-column-start: 1;
     grid-row-start: 2; }
 
-svg#flip_svg {
-  opacity: 0.6; }
-  svg#flip_svg:hover {
-    opacity: 1;
-    cursor: pointer; }
-
 div#card {
   grid-column-start: 2;
   grid-row-start: 1;
   justify-self: center;
-  align-self: end; }
-  div#card #card_container {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    display: grid;
-    width: fit-content;
-    border-radius: 50px;
-    overflow: hidden; }
-    div#card #card_container #tile[data-position="0"] {
-      grid-column-start: 1;
-      grid-row-start: 1; }
-    div#card #card_container #tile[data-position="1"] {
-      grid-column-start: 2;
-      grid-row-start: 1; }
-    div#card #card_container #tile[data-position="2"] {
-      grid-column-start: 2;
-      grid-row-start: 2; }
-    div#card #card_container #tile[data-position="3"] {
-      grid-column-start: 1;
-      grid-row-start: 2; }
+  align-self: end;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  display: grid;
+  width: fit-content;
+  border-radius: 50px;
+  border-style: solid;
+  border-width: 4px;
+  border-color: transparent;
+  overflow: hidden; }
+  div#card[data-claimed-color="#0f93a0"] {
+    border-color: #0f93a0; }
+  div#card[data-claimed-color="#738e35"] {
+    border-color: #738e35; }
+  div#card[data-claimed-color="#e36842"] {
+    border-color: #e36842; }
+  div#card[data-claimed-color="#dfe089"] {
+    border-color: #dfe089; }
+  div#card #tile[data-position="0"] {
+    grid-column-start: 1;
+    grid-row-start: 1; }
+  div#card #tile[data-position="1"] {
+    grid-column-start: 2;
+    grid-row-start: 1; }
+  div#card #tile[data-position="2"] {
+    grid-column-start: 2;
+    grid-row-start: 2; }
+  div#card #tile[data-position="3"] {
+    grid-column-start: 1;
+    grid-row-start: 2; }
