--- a/modules/css/flip.scss
+++ b/modules/css/flip.scss
@@ -9,6 +9,14 @@ div#flip {
     transform: scaleX(-1);
   }
 
+  &.connected:hover svg#flip_svg {
+    opacity: 1;
+  }
+
+  svg#flip_svg {
+    opacity: 0.6;
+  }
+
   @for $position from 0 through 3 {
     &[data-position="#{$position}"] {
       @if $position == 0 {
@@ -25,14 +33,5 @@ div#flip {
         grid-row-start: 2;
       }
     }
-  }
-}
-
-svg#flip_svg {
-  opacity: 0.6;
-
-  &:hover {
-    opacity: 1;
-    cursor: pointer;
   }
 }
