--- a/modules/css/card.scss
+++ b/modules/css/card.scss
@@ -4,19 +4,26 @@ div#card {
   justify-self: center;
   align-self: end;
 
-  #card_container {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    display: grid;
-    width: fit-content;
-    border-radius: 50px;
-    overflow: hidden;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  display: grid;
+  width: fit-content;
+  border-radius: 50px;
+  border-style: solid;
+  border-width: 4px;
+  border-color: transparent;
+  overflow: hidden;
 
-    @for $position from 0 through 3 {
-      #tile[data-position="#{$position}"] {
-        grid-column-start: round((($position % 3) + 2)/2);
-        grid-row-start: round($position / 2 + 0.5);
-      }
+  @each $color in $colors {
+    &[data-claimed-color="#{$color}"] {
+      border-color: #{$color};
+    }
+  }
+
+  @for $position from 0 through 3 {
+    #tile[data-position="#{$position}"] {
+      grid-column-start: round((($position % 3) + 2)/2);
+      grid-row-start: round($position / 2 + 0.5);
     }
   }
 }
